src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surname_Arabic__c</fullName>
        <label>Surname Arabic</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_National_ID__c</fullName>
        <label>Third National ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Passport_Expiry_Date__c</fullName>
        <label>Third Passport Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Passport_Issue_Date__c</fullName>
        <label>Third Passport Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Third_Passport_No__c</fullName>
        <label>Third Passport No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transport_Allowance__c</fullName>
        <label>Transport Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Leasing Contact</fullName>
                </value>
                <value>
                    <fullName>Licensee Contact</fullName>
                </value>
                <value>
                    <fullName>Owner Sales Agent</fullName>
                </value>
                <value>
                    <fullName>Owner Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Alternate Payee</fullName>
                </value>
                <value>
                    <fullName>Authorized Signatory</fullName>
                </value>
                <value>
                    <fullName>Focal Point</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Finance Manager</fullName>
                </value>
                <value>
                    <fullName>Legal Representative</fullName>
                </value>
                <value>
                    <fullName>Manager Incharge</fullName>
                </value>
                <value>
                    <fullName>Marketing Manager</fullName>
                </value>
                <value>
                    <fullName>Office Manager</fullName>
                </value>
                <value>
                    <fullName>PRO</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>CollectionTeam</fullName>
                </value>
                <value>
                    <fullName>Licensing Contact</fullName>
                </value>
                <value>
                    <fullName>Individual Shareholder</fullName>
                </value>
                <value>
                    <fullName>Corporate Shareholder</fullName>
                </value>
                <value>
                    <fullName>Parent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>U_I_D_No__c</fullName>
        <label>U.I.D. No.</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <label>Unique ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uses_salesforce_com__c</fullName>
        <label>Uses salesforce.com</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VIP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VIP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verification_Source__c</fullName>
        <label>Verification Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Verification_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Verification Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visa_Number__c</fullName>
        <label>Visa Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created mainly to display pending work orders on the Contact object to a Community User.
Iryna</description>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Yardi_Code__c</fullName>
        <label>Yardi Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Error_Message__c</fullName>
        <label>Yardi Integration Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardi_Integration_Status__c</fullName>
        <label>Yardi Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Integration - Yardi</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Failure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yardi_contact_Id__c</fullName>
        <externalId>true</externalId>
        <label>Yardi contact Id</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isSubmit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isSubmit</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>